# for_HR

./: README.md
Noxer/: .dockerignore  .env.example  .gitignore  README.md  TechnicalTask.md  celery_app.py  database.py  docker-compose.yaml  example_raw_main_false.json  example_raw_main_true.json  flask_app.py  gunicorn_cfg.py  pyproject.toml  requirements.txt  settings.py
Noxer/docker/: app.Dockerfile  entrypoint.sh  nginx.Dockerfile  nginx.conf
Noxer/migrations/: env.py
Noxer/migrations/versions/: 0.6093512c7d54_init.py
Noxer/products/: blueprint.py  models.py  schemas.py
Noxer/services/: services_celery.py  tunned_flask.py
Noxer/templates/: all_info.html  base.html
